log/build_2022-12-07_22-21-08/mypkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/yoshinotaiki/ros2_ws/install/mypkg/lib/python3.10/site-packages/mypkg/talker.py", line 3
    from person_msgs.msg import Int 16
                                    ^^
SyntaxError: invalid syntax

